<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/icon_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:background="@drawable/icon_login_bg"
        android:orientation="vertical"
        android:paddingTop="74dp" >

        <EditText
            android:id="@+id/etPhone"
            style="@style/login_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_input_phone" />

        <EditText
            android:id="@+id/etPassword"
            style="@style/login_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_input_password"
            android:numeric="integer" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:background="@drawable/btn_register_selector"
                android:text="@string/register" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="35dp"
                android:layout_weight="1"
                android:background="@drawable/btn_login_selector"
                android:text="@string/login" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="35dp"
            android:text="@string/forget_password"
            android:textColor="#7c7b7b"
            android:textSize="10sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="86dp"
        android:background="@drawable/icon_common_title_bg"
        android:gravity="center_horizontal"
        android:paddingTop="17dp"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="20sp" />

</RelativeLayout>